# interview-coach

./: .gitignore  Detailed_Design_Document.md  PRD_Interview_Coach_System.md  README.md  env.example  pyproject.toml  requirements.txt
config/: config.yaml  providers.yaml  providers.yaml.example  question_templates.yaml  question_templates.yaml.example
interview_coach/: __init__.py  cli.py
interview_coach/agents/: __init__.py  base_agent.py  evaluator_agent.py  interviewer_agent.py  orchestrator_agent.py  topic_manager_agent.py
interview_coach/models/: __init__.py  base.py  enums.py  interview.py  job.py  resume.py
interview_coach/parsers/: __init__.py  base_parser.py  file_handlers.py  job_parser.py  resume_parser.py
interview_coach/providers/: __init__.py  deepseek_provider.py  qwen_provider.py
interview_coach/services/: __init__.py  configuration_manager.py  llm_manager.py  parsing_service.py  storage_manager.py
interview_coach/utils/: __init__.py  exceptions.py  logging.py
